# itmo_dl_nlp_course

./: .gitignore  README.md  hw1_text_classification.ipynb  hw2_word2vec.ipynb  hw3_ner_transformers.ipynb  hw4_topic_modeling.ipynb  hw5_llm_qlora.ipynb  hw6_alignment_abliteration.ipynb  pyproject.toml
