[project]
name = "itmo-dl-nlp-hw1"
version = "0.1.0"
description = "HW1: Text Classification with Lenta-ru-news dataset"
requires-python = ">=3.10"
dependencies = [
    "corus>=0.10.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",
    "tqdm>=4.65.0",
    "pymorphy3>=2.0.0",
    "nltk>=3.8.0",
    "gensim>=4.3.0",
    "navec>=0.10.0",
]

[dependency-groups]
dev = []
